--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,26 @@
 version: '3'
 services:
   umami:
-    image: ghcr.io/umami-software/umami:postgresql-latest
+    image: umami:dev
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: postgresql://umami:umami@db:5432/umami
+      DATABASE_URL: postgresql://umami:umami@umami_db:5432/umami
       DATABASE_TYPE: postgresql
       HASH_SALT: replace-me-with-a-random-string
     depends_on:
-      - db
+      - umami_db
     restart: always
-  db:
-    image: postgres:12-alpine
+  umami_db:
+    image: postgres:13
     environment:
       POSTGRES_DB: umami
       POSTGRES_USER: umami
       POSTGRES_PASSWORD: umami
     volumes:
-      - ./sql/schema.postgresql.sql:/docker-entrypoint-initdb.d/schema.postgresql.sql:ro
       - umami-db-data:/var/lib/postgresql/data
-    restart: always
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
 volumes:
   umami-db-data:
